--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /* Master Styles */
+body {
+   background-color: papayawhip;
+}
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
