--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>Mi Primera App Angular 2</h1>
 <h2>{{numberOfUsers}} users</h2>
+<div (click)="onButtonClick($event)">
+   <button>Click me!</button>
+</div>
