Another event sample

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,3 +3,6 @@
 <div (click)="onButtonClick($event)">
    <button>Click me!</button>
 </div>
+<div>
+   <textarea (keydown.space)="onSpacePress($event)">Press space!</textarea>
+</div>
